Module_4/Task1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: backend
